# SmartScoreML

./: LICENSE  Makefile  README.md  pyproject.toml  template.yaml
.github/workflows/: deploy.yml
build_scripts/: deploy.sh
smartscore_ml/: constants.py  custom_model.py  event_handler.py  service.py  utility.py
smartscore_ml/Scripts/: check_torch_setup.py  create_model.py  shared.py  test_model.py
